--- a/src/Makefile
+++ b/src/Makefile
@@ -5,9 +5,9 @@ OBJ_FILES := $(CPP_FILES:.cpp=.o)
 CC_FLAGS := -D__GXXEXPERIMENTAL_CXX0X__ -Wall -std=c++0x
 
 cat: $(OBJ_FILES)
-	gcc -o $@ $^
+	g++ -o $@ $^
 
 %.o: %.cpp
-	gcc $(CC_FLAGS) -c -o $@ $<
+	g++ $(CC_FLAGS) -c -o $@ $<
 
 all: cat
