--- a/src/Makefile
+++ b/src/Makefile
@@ -4,10 +4,10 @@ CPP_FILES := $(wildcard *.cpp)
 OBJ_FILES := $(CPP_FILES:.cpp=.o)
 CC_FLAGS := -D__GXXEXPERIMENTAL_CXX0X__ -Wall -std=c++0x
 
-cat: $(OBJ_FILES)
-	g++ -o $@ $^
+cat: $(addprefix ../obj/,$(OBJ_FILES))
+	g++ -o ../bin/$@ $^
 
 %.o: %.cpp
-	g++ $(CC_FLAGS) -c -o $@ $<
+	g++ $(CC_FLAGS) -c -o ../obj/$@ $<
 
 all: cat
