trying to understand

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,14 @@
 #makefile for ElevatorLogic
 
 CPP_FILES := $(wildcard *.cpp)
-OBJ_FILES := $(CPP_FILES:.cpp=.o)
+OBJ_FILES := $(addprefix ../obj/,$(CPP_FILES:.cpp=.o))
+
 CC_FLAGS := -D__GXXEXPERIMENTAL_CXX0X__ -Wall -std=c++0x
 
-cat: $(addprefix ../obj/,$(OBJ_FILES))
+cat: $(OBJ_FILES)
 	g++ -o ../bin/$@ $^
 
-%.o: %.cpp
-	g++ $(CC_FLAGS) -c -o ../obj/$@ $<
+../obj/%.o: %.cpp
+	g++ $(CC_FLAGS) -c -o $@ $<
 
 all: cat
