created unified test

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,3 +15,13 @@ all: cat
 
 clean:
 	rm ../obj/* ../bin/*
+
+test:
+	# recompile everything and test all known passed tests
+	# write event logs and, if needed, error logs
+	#make clean && make all
+	find ../passed -type f | while read line; do \
+		tmp=`mktemp`; \
+	    ../bin/cat "$$line" > ../log/$$(basename "$$line").log 2> $$tmp; \
+	    [ ! -s "$$tmp" ] || cp "$$tmp" ../log/$$(basename "$$line").err; \
+	done; \
