--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,7 @@ clean:
 test:
 	# recompile everything and test all known passed tests
 	# write event logs and, if needed, error logs
-	#make clean && make all
+	make clean && make all
 	find ../passed -type f | while read line; do \
 		tmp=`mktemp`; \
 	    ../bin/cat "$$line" > ../log/$$(basename "$$line").log 2> $$tmp; \
