brought down test4d to 118 ticks. still nothing

--- a/src/Makefile
+++ b/src/Makefile
@@ -19,7 +19,8 @@ clean:
 test:
 	# recompile everything and test all known passed tests
 	# write event logs and, if needed, error logs
-	make clean && make all
+	#make clean &&
+	make all
 	rm ../log/*
 	find ../passed -type f | while read line; do \
 		tmp=`mktemp`; \
